fix layout on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,9 @@ h1, h2, h3, h4, h5, h6 {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
+  .col-xs-6 {
+    margin-top: 10px;
+  }
 }
 
 /*--------------------------------------------------------------
